<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProyectoPractica</string>
    <string name="PasswordHint">Contraseña</string>
    <string name="UserHint">Usuario</string>
    <string name="RegisterButton">Registrarse</string>
    <string name="LogInButton">Iniciar Sesión</string>
    <string name="EmailHint">Email</string>
    <string name="MovieButton">Películas</string>
    <string name="SerieButton">Series</string>

<!--    Cadenas de control de campos -->
    <string name="NameError">Nombre vacío</string>

    <string name="PasswordBlankError">Contraseña vacía</string>
    <string name="PasswordCapitalError">Contraseña sin mayúscula</string>
    <string name="PasswordLengthError">Contraseña menor a 8 caracteres</string>
    <string name="PasswordSimbolError">Contraseña sin símbolo</string>
    <string name="PasswordNumberError">Contraseña sin número</string>

    <string name="EmailBlankError">Email vacío</string>
    <string name="EmailAtError">Email sin "@"</string>
    <string name="EmailDomainError">Email sin dominio aceptado</string>
    <string name="UserDescription">Avatar de usuario</string>
    <string name="ScrollDescription">Scroll con catálogo de series y películas</string>
    <string name="Back">Volver</string>
    <string name="PasswordChange">Introduce contraseña</string>
    <string name="UserChange">Introduce usuario</string>
    <string name="EmailChange">Cambiar correo</string>

    <string name="black_mirror">Ambientada en un mundo a sólo unos minutos del nuestro,
        "Black Mirror", una serie de antología no presentada en el Reino Unido y EE. UU.;
        revela cómo las tecnologías modernas pueden ser contraproducentes y usarse contra
        sus creadores, cada episodio ambientado en una realidad ligeramente diferente con
        diferentes personajes que luchan contra diferentes tipos de tecnologías. La serie
        se desarrolló desde 2011 hasta 2019.
    </string>
    <string name="house_dragon">La dinastía Targaryen se encuentra en la cúspide absoluta de
        su poder, con más de 10 dragones bajo su yugo. La mayoría de los imperios se desmoronan
        desde esas alturas. En el caso de los Targaryen, su lenta caída comienza cuando el rey
        Viserys rompe con un siglo de tradición al nombrar a su hija Rhaenyra heredera del Trono
        de Hierro. Pero cuando Viserys engendra un hijo, la corte se sorprende cuando Rhaenyra
        conserva su condición de heredera, y las semillas de la división siembran fricciones
        en todo el reino.
    </string>
    <string name="percy_jackson">Percy Jackson está en una búsqueda peligrosa. Superando a los
        monstruos y a los dioses, deberá viajar a través de América para devolver el rayo
        maestro de Zeus y detener una guerra total. Después de perder a su madre, Percy se
        refugia en el Campamento Mestizo, un santuario para niños semidioses. Debe demostrar
        su valía y confrontar sus orígenes una vez que descubre que él también es un semidiós
        y que se lanzará a los peligros de perseguir enemigos en busca del inframundo. Con la
        ayuda de sus compañeros de misión Annabeth y Grover, el viaje de Percy lo acercará a
        las respuestas que busca: cómo encajar en un mundo en el que se siente fuera de lugar,
        si alguna vez volverá a ver a su madre y si podrá hacerlo. descubrir nunca quién está
        destinado a ser.
    </string>
    <string name="reacher">Cuando el oficial retirado de la policía militar Jack Reacher es
        arrestado por un asesinato que no cometió, se encuentra en medio de una conspiración
        mortal llena de policías sucios, empresarios turbios y políticos intrigantes. Con nada
        más que su ingenio, debe descubrir qué está sucediendo en Margrave, Georgia.
    </string>
    <string name="shameless">Observe a la familia irlandesa americana
        Gallagher lidiando con su padre alcohólico Frank. Fiona, la hija mayor, asume el
        papel de madre de sus cinco hermanos y hermanas. Lip, Ian, Debbie, Carl y Liam
        se enfrentan a la vida en el lado sur de Chicago. Fiona equilibra su vida
        sexual y la crianza de sus hermanos. Cada episodio es otra situación loca en la que
        se meten uno o más de los seis Gallagher. Míralos crecer y aprende cómo abrirse camino
        en la vida con lo poco que tienen.
    </string>
    <string name="the_boys" tools:ignore="TypographyEllipsis">Los superhéroes más poderosos del
        mundo ("Supes") están doblegando en secreto a la sociedad a su antojo, hasta que el
        desvalido equipo de "Los Chicos", víctimas de los "Supes", urde un plan para acabar
        con "Los Siete" y "Vought International" de una vez por todas. Luchando contra una
        interminable conspiración de espionaje corporativo, secretos profundos y figuras casi
        divinas, "Los Chicos" harán lo que sea necesario para salvar al mundo de sus
        "superhéroes" corruptos antes de que se vuelvan imparables... o morirán en el intento.
    </string>

    <string name="oppenhaimer">Una dramatización de la historia de vida de J. Robert Oppenheimer,
        el físico que tuvo un papel importante en el desarrollo de la bomba atómica, ayudando así
        a poner fin a la Segunda Guerra Mundial. Vemos su vida desde la época universitaria hasta
        después de la Segunda Guerra Mundial, donde su fama lo vio envuelto en maquinaciones políticas.
    </string>
    <string name="asesinos_luna">La historia tiene lugar en la década de 1920 en torno a la tribu
        india Osage que vive en Oklahoma. Los nativos americanos están siendo asesinados uno por
        uno después de que la tribu se enriquece con el descubrimiento de petróleo. La masacre de
        Osage atrae la atención del FBI, que inicia una investigación.
    </string>
    <string name="quiet_place">En una Tierra devastada e invadida por depredadores invencibles de
        posible origen extraterrestre, los Abbott luchan por sobrevivir en la desolada jungla
        urbana de la ciudad de Nueva York: una trampa mortal definida por una nueva era de
        silencio absoluto. De hecho, como el ruido atrae a este nuevo tipo de invasor, incluso
        el más mínimo sonido puede ser mortal. Sin embargo, a pesar de que ya han pasado doce
        meses desde los primeros avistamientos de los poderosos monstruos, la resistente familia
        Abbott todavía se mantiene fuerte. En esta silenciosa distopía, aprender las reglas de
        supervivencia es crucial. Y ahora, más que nunca, los Abbott no deben emitir ningún sonido.
    </string>
    <string name="sociedad_nieve">En 1972, el vuelo 571 de la Fuerza Aérea Uruguaya, fletado para
        llevar un equipo de rugby a Chile, se estrella catastróficamente en un glaciar en el
        corazón de los Andes. Sólo 16 de los 40 pasajeros sobrevivieron al accidente y, al
        encontrarse en uno de los entornos más duros del mundo, se ven obligados a recurrir
        a medidas extremas para sobrevivir.
    </string>
    <string name="split">Aunque Kevin (James McAvoy) ha revelado 23 personalidades a su psiquiatra
        de confianza, la Dra. Fletcher (Betty Buckley), todavía queda una sumergida que se
        materializará y dominará a todas las demás. Obligado a secuestrar a tres adolescentes
        lideradas por el obstinado y observador Casey, Kevin llega a una guerra por la
        supervivencia entre todos los que están dentro de él, así como todos los que lo rodean,
        mientras las paredes entre sus compartimentos se hacen añicos.
    </string>
    <string name="hablame">Cuando un grupo de amigos descubre cómo conjurar espíritus usando una
        mano embalsamada, quedan enganchados a la nueva emoción, hasta que uno de ellos va
        demasiado lejos y abre la puerta al mundo de los espíritus, obligándolos a elegir
        en quién confiar: los muertos o los viviendo.
    </string>

</resources>