<?xml version="1.0" encoding="utf-8"?>

<!--
    Layout principal con fondo de cartelera.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_blurred"
    tools:context=".RegisterActivity">

<!--
    Elemento que contendrá el resto, está centrado en la pantalla y tiene un color de fondo
    negro con transparencia de un 80%.
-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:cardBackgroundColor="#CC000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <!--
    Primer campo de texto a rellenar, con un tamaño amplio para fácil lectura y pulsado, se
    comprobará si está vacío, si contiene un '@' y si acaba en .es, .com o semejantes en la
    ejecución del programa.
-->
        <EditText
            android:id="@+id/emailRegEditText"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="175dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/EmailHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <!--
    Segundo campo de texto a rellenar, con un tamaño amplio para fácil lectura y pulsado, se
    comprobará si está vacío en la ejecución del programa.
-->

        <EditText
            android:id="@+id/usernameRegEditText"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/UserHint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />


        <!--
    Tercer campo de texto a rellenar, con un tamaño amplio para fácil lectura y pulsado, se
    comprobará si está vacío, si tiene 8 caracteres, si contiene una mayúscula, un dígito y
    un símbolo en la ejecución del programa.
-->
        <EditText
            android:id="@+id/passwordRegEditText"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="325dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <!--
    Layout horizontal para colocación de botones de forma simétrica.
-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:orientation="horizontal">

            <!--
    Botón que realiza las comprobaciones de los campos de texto y en caso de no haber errores
    envía al usuario a la pestaña de inicio de sesión.
-->
            <Button
                android:id="@+id/registerConfirmButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70sp"
                android:layout_weight="1"
                android:text="@string/RegisterButton"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/avatar_blanco" />

            <GridView
                android:id="@+id/avatarGrid"
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:horizontalSpacing="8dp"
                android:numColumns="4"
                android:padding="8dp"
                android:verticalSpacing="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>